# summarization

./: CMakeLists.txt  Guide.txt  README.md  main.cpp
Helpers/: DB.cpp  DB.h
Models/: Word.cpp  Word.h
mysql-connector-c++/: INFO_BIN
mysql-connector-c++/lib64/: libcrypto.1.0.0.dylib  libmysqlcppconn.7.dylib  libmysqlcppconn8.1.8.0.15.dylib  libmysqlcppconn8.1.dylib  libssl.1.0.0.dylib
